# Sum-of-polynomials

./: CMakeLists.txt
headers/: TList.h  TPolynomial.h
src/: TList.cpp  TPolynomial.cpp  main.cpp
